--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "motion": "^12.6.3",
-    "next": "^15.3.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next": "15.3.6",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
