--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,13 +38,13 @@
     "jotai": "^2.12.4",
     "mixpanel-browser": "^2.63.0",
     "motion": "^12.6.3",
-    "next": "^15.4.1",
+    "next": "15.4.8",
     "nuqs": "^2.4.1",
     "posthog-js": "^1.234.9",
     "posthog-node": "^4.11.1",
     "radix-ui": "^1.1.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.2",
+    "react-dom": "19.1.2",
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.16.0",
     "react-scroll": "^1.9.3",
